# sabre

./: .gitignore  README.md  ROADMAP.internal.md  demo.ipynb  pyproject.toml
src/ailab/: __init__.py  magic.py  prompts.py  serialize.py
src/sabre/: __init__.py  agent.py  cli.py  core.py  diff.py  magic.py  packs.py  prompts.py  session.py
tests/: test_agent.py  test_cli.py  test_diff.py  test_packs.py  test_prompts.py  test_serialize.py  test_session.py
