[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ailab"
version = "0.1.0"
description = "Explain Jupyter cell outputs (plots, DataFrames, tracebacks) with Claude"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "ipython>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pandas", "matplotlib", "numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/ailab"]
