[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sabre"
version = "0.1.0"
description = "Explain Jupyter cell outputs (plots, DataFrames, tracebacks) with Claude"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "ipython>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pandas", "matplotlib", "numpy", "nbformat", "ipywidgets"]
export = ["nbformat", "nbclient"]
agent = ["ipywidgets"]

[project.scripts]
sabre = "sabre.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sabre"]
